--- a/arch/arm64/boot/dts/qcom/andromeda-sm8150-p2-overlay.dts
+++ b/arch/arm64/boot/dts/qcom/andromeda-sm8150-p2-overlay.dts
@@ -1,4 +1,4 @@
-/* Copyright (c) 2019, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2017-2018, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -13,13 +13,23 @@
 /dts-v1/;
 /plugin/;
 
+#include <dt-bindings/clock/qcom,gcc-sm8150.h>
+#include <dt-bindings/clock/qcom,camcc-sm8150.h>
+#include <dt-bindings/clock/qcom,rpmh.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 
-#include "atoll-atp.dtsi"
+#include "andromeda-audio-overlay.dtsi"
+
+#include "andromeda-sm8150-p2.dtsi"
+#include "andromeda-pinctrl-p2.dtsi"
+
+#include "sdx5xm-external-soc.dtsi"
+#include "sm8150-sdx50m.dtsi"
 
 / {
-	model = "ATP";
-	compatible = "qcom,atoll-idp", "qcom,atoll", "qcom,idp", "qcom,atp";
-	qcom,msm-id = <407 0x0>;
-	qcom,board-id = <33 0>;
+        model = "SDX50M ANDROMEDA";
+        compatible = "qcom,sm8150-mtp", "qcom,sm8150", "qcom,mtp";
+        qcom,board-id = <0x29 0x1>;
+
 };
+
