--- a/arch/arm64/boot/dts/qcom/davinci-sm8150-overlay.dts
+++ b/arch/arm64/boot/dts/qcom/davinci-sm8150-overlay.dts
@@ -1,4 +1,4 @@
-/* Copyright (c) 2019, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2017-2018, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -13,13 +13,16 @@
 /dts-v1/;
 /plugin/;
 
+#include <dt-bindings/clock/qcom,gcc-sm8150.h>
+#include <dt-bindings/clock/qcom,camcc-sm8150.h>
+#include <dt-bindings/clock/qcom,rpmh.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 
-#include "atoll-atp.dtsi"
+#include "davinci-sm8150.dtsi"
+#include "davinci-audio-overlay.dtsi"
 
 / {
-	model = "ATP";
-	compatible = "qcom,atoll-idp", "qcom,atoll", "qcom,idp", "qcom,atp";
-	qcom,msm-id = <407 0x0>;
-	qcom,board-id = <33 0>;
+	model = "DAVINCI";
+	compatible = "qcom,sm8150-cdp", "qcom,sm8150", "qcom,cdp";
+	qcom,board-id = <38 0>;
 };
