--- a/arch/arm64/boot/dts/qcom/sm8150-sde-display.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150-sde-display.dtsi
@@ -29,45 +29,18 @@
 #include "dsi-panel-sharp-dualmipi-1080p-120hz.dtsi"
 #include "dsi-panel-s6e3ha3-amoled-dualmipi-wqhd-cmd.dtsi"
 #include "dsi-panel-sw43404-amoled-dsc-wqhd-cmd.dtsi"
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 #include "dsi-panel-ss-notch-fhd-ea8074-cmd.dtsi"
-#endif
 #include "dsi-panel-sw43404-amoled-dsc-wqhd-video.dtsi"
 #include "dsi-panel-sw43404-amoled-dsc-fhd-plus-cmd.dtsi"
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 #include "dsi-panel-samsung-fhd-ea8076-cmd.dtsi"
-#ifdef CONFIG_MACH_XIAOMI_VAYU
 #include "dsi-panel-tianma-fhd-nt36672a-video.dtsi"
-#endif // CONFIG_MACH_XIAOMI_VAYU
-#endif // CONFIG_MACH_XIAOMI_SM8150
 #include "dsi-panel-nt36850-truly-dualmipi-wqhd-cmd.dtsi"
 #include "dsi-panel-rm69299-visionox-amoled-fhd-plus-video.dtsi"
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 #include "dsi-panel-ss-fhd-ea8076-cmd.dtsi"
 #include "dsi-panel-ss-fhd-ea8076-global-cmd.dtsi"
-#ifdef CONFIG_MACH_XIAOMI_VAYU
 #include "dsi-panel-j20s-36-02-0a-lcd-dsc-vid.dtsi"
 #include "dsi-panel-j20s-42-02-0b-lcd-dsc-vid.dtsi"
-#endif // CONFIG_MACH_XIAOMI_VAYU
-#endif
 #include <dt-bindings/clock/mdss-10nm-pll-clk.h>
-
-#ifndef CONFIG_MACH_XIAOMI_SM8150
-&tlmm {
-	display_panel_avdd_eldo_default: display_panel_avdd_eldo_default {
-		mux {
-			pins = "gpio130";
-			function = "gpio";
-		};
-		config {
-			pins = "gpio130";
-			drive-strength = <8>;
-			bias-disable = <0>;
-			output-high;
-		};
-	};
-};
-#endif
 
 &soc {
 	dsi_panel_pwr_supply: dsi_panel_pwr_supply {
@@ -188,22 +161,6 @@
 		};
 	};
 
-#ifndef CONFIG_MACH_XIAOMI_SM8150
-	display_panel_avdd_eldo: display-gpio-regulator@0 {
-		compatible = "regulator-fixed";
-		regulator-name = "display_panel_avdd_eldo";
-		regulator-min-microvolt = <1800000>;
-		regulator-max-microvolt = <1800000>;
-		regulator-enable-ramp-delay = <233>;
-		gpio = <&tlmm 130 0>;
-		enable-active-high;
-		regulator-boot-on;
-		pinctrl-names = "default";
-		pintctrl-0 = <&display_panel_avdd_eldo_default>;
-	};
-#endif
-
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 	dsi_amoled_panel_pwr_supply: dsi_amoled_panel_pwr_supply {
 		#address-cells = <1>;
 		#size-cells = <0>;
@@ -229,7 +186,6 @@
 			qcom,supply-pre-off-sleep = <10>;
 		};
 	};
-#endif
 
 	dsi_sharp_4k_dsc_video_display: qcom,dsi-display@0 {
 		label = "dsi_sharp_4k_dsc_video_display";
@@ -441,7 +397,6 @@
 		qcom,dsi-panel = <&dsi_sw43404_amoled_fhd_plus_cmd>;
 	};
 
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 	dsi_ss_ea8074_fhd_cmd_display: qcom,dsi-display@19 {
 		label = "dsi_ss_ea8074_fhd_cmd_display";
 		qcom,display-type = "primary";
@@ -474,13 +429,8 @@
 
 		qcom,dsi-panel = <&dsi_tianma_fhd_nt36672a_video>;
 	};
-#endif
 
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 	dsi_dual_nt36850_truly_cmd_display: qcom,dsi-display@26 {
-#else
-	dsi_dual_nt36850_truly_cmd_display: qcom,dsi-display@19 {
-#endif
 		label = "dsi_dual_nt36850_truly_cmd_display";
 		qcom,display-type = "primary";
 
@@ -491,11 +441,7 @@
 		qcom,dsi-panel = <&dsi_dual_nt36850_truly_cmd>;
 	};
 
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 	dsi_nt35695b_truly_fhd_cmd_sec_display: qcom,dsi-display@27 {
-#else
-	dsi_nt35695b_truly_fhd_cmd_sec_display: qcom,dsi-display@20 {
-#endif
 		label = "dsi_nt35695b_truly_fhd_cmd_display";
 		qcom,display-type = "secondary";
 
@@ -507,11 +453,7 @@
 
 	};
 
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 	dsi_nt35695b_truly_fhd_video_sec_display: qcom,dsi-display@28 {
-#else
-	dsi_nt35695b_truly_fhd_video_sec_display: qcom,dsi-display@21 {
-#endif
 		label = "dsi_nt35695b_truly_fhd_video_display";
 		qcom,display-type = "secondary";
 
@@ -522,11 +464,7 @@
 		qcom,dsi-panel = <&dsi_nt35695b_truly_fhd_video>;
 	};
 
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 	dsi_sim_sec_hd_cmd_display: qcom,dsi-display@29 {
-#else
-	dsi_sim_sec_hd_cmd_display: qcom,dsi-display@22 {
-#endif
 
 		label = "dsi_sim_sec_hd_cmd_display";
 		qcom,display-type = "secondary";
@@ -538,7 +476,6 @@
 		qcom,dsi-panel = <&dsi_sim_sec_hd_cmd>;
 	};
 
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 	dsi_ss_fhd_ea8076_cmd_display: qcom,dsi-display@30 {
 
 		label = "dsi_ss_fhd_ea8076_cmd_display";
@@ -550,6 +487,7 @@
 
 		qcom,dsi-panel = <&dsi_ss_fhd_ea8076_cmd>;
 	};
+
 
 	dsi_ss_fhd_ea8076_global_cmd_display: qcom,dsi-display@32 {
 
@@ -563,7 +501,6 @@
 		qcom,dsi-panel = <&dsi_ss_fhd_ea8076_global_cmd>;
 	};
 
-#ifdef CONFIG_MACH_XIAOMI_VAYU
 	dsi_j20s_36_02_0a_video_display: qcom,dsi-display@36{
 		label = "dsi_j20s_36_02_0a_video_display";
 		qcom,display-type = "primary";
@@ -587,14 +524,8 @@
 		qcom,ulps-enabled;
 		qcom,dsi-panel = <&dsi_j20s_42_02_0b_video>;
 	};
-#endif
-#endif
 
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 	dsi_rm69299_visionox_amoled_vid_display: qcom,dsi-display@40 {
-#else
-	dsi_rm69299_visionox_amoled_vid_display: qcom,dsi-display@23 {
-#endif
 		label = "dsi_rm69299_visionox_amoled_vid_display";
 		qcom,display-type = "primary";
 
@@ -635,14 +566,9 @@
 		vddio-supply = <&pm8150_l14>;
 		lab-supply = <&lcdb_ldo_vreg>;
 		ibb-supply = <&lcdb_ncp_vreg>;
-#ifndef CONFIG_MACH_XIAOMI_SM8150
-		vdd-supply = <&display_panel_avdd_eldo>;
-#endif
-#ifdef CONFIG_MACH_XIAOMI_SM8150
+		//vdd-supply = <&display_panel_avdd_eldo>;
 		vci-supply = <&pm8150_l13>;
-#endif
 
-#ifdef CONFIG_MACH_XIAOMI_VAYU
 		qcom,dsi-display-list =
 			<&dsi_sharp_4k_dsc_video_display
 			&dsi_sharp_4k_dsc_cmd_display
@@ -673,30 +599,7 @@
 			&dsi_ss_fhd_ea8076_global_cmd_display
 			&dsi_j20s_36_02_0a_video_display
 			&dsi_j20s_42_02_0b_video_display>;
-#else
-		qcom,dsi-display-list =
-			<&dsi_sharp_4k_dsc_video_display
-			&dsi_sharp_4k_dsc_cmd_display
-			&dsi_sharp_1080_cmd_display
-			&dsi_dual_sharp_1080_120hz_cmd_display
-			&dsi_dual_nt35597_truly_video_display
-			&dsi_dual_nt35597_truly_cmd_display
-			&dsi_nt35597_truly_dsc_cmd_display
-			&dsi_nt35597_truly_dsc_video_display
-			&dsi_sim_vid_display
-			&dsi_dual_sim_vid_display
-			&dsi_sim_cmd_display
-			&dsi_dual_sim_cmd_display
-			&dsi_sim_dsc_375_cmd_display
-			&dsi_dual_sim_dsc_375_cmd_display
-			&dsi_sw43404_amoled_cmd_display
-			&dsi_nt35695b_truly_fhd_cmd_display
-			&dsi_nt35695b_truly_fhd_video_display
-			&dsi_sw43404_amoled_video_display
-			&dsi_sw43404_amoled_fhd_plus_cmd_display
-			&dsi_rm69299_visionox_amoled_vid_display
-			&dsi_dual_nt36850_truly_cmd_display>;
-#endif
+
 	};
 
 	sde_dsi1: qcom,dsi-display-secondary {
@@ -729,9 +632,7 @@
 		vddio-supply = <&pm8150_l14>;
 		lab-supply = <&lcdb_ldo_vreg>;
 		ibb-supply = <&lcdb_ncp_vreg>;
-#ifndef CONFIG_MACH_XIAOMI_SM8150
-		vdd-supply = <&display_panel_avdd_eldo>;
-#endif
+		//vdd-supply = <&display_panel_avdd_eldo>;
 
 		qcom,dsi-display-list =
 			<&dsi_nt35695b_truly_fhd_cmd_sec_display
@@ -757,9 +658,7 @@
 &sde_dp {
 	qcom,dp-usbpd-detection = <&pm8150b_pdphy>;
 	qcom,ext-disp = <&ext_disp>;
-#ifndef CONFIG_MACH_XIAOMI_SM8150
-	qcom,dp-aux-switch = <&fsa4480>;
-#endif
+	/* qcom,dp-aux-switch = <&fsa4480>; */
 
 	qcom,usbplug-cc-gpio = <&tlmm 38 0>;
 
@@ -942,7 +841,7 @@
 	qcom,mdss-dsi-display-timings {
 		timing@0 {
 			qcom,mdss-dsi-panel-phy-timings = [00 1e 08 07 24 22
-				08 08 05 02 04 00 19 17];
+			08 08 05 02 04 00 19 17];
 			qcom,display-topology = <1 0 1>;
 			qcom,default-topology-index = <0>;
 			qcom,panel-roi-alignment = <720 40 720 40 720 40>;
@@ -1154,7 +1053,6 @@
 	};
 };
 
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 &dsi_ss_notch_fhd_ea8074_cmd {
 	qcom,mdss-dsi-t-clk-post = <0x19>;
 	qcom,mdss-dsi-t-clk-pre = <0x1C>;
@@ -1167,7 +1065,6 @@
 		};
 	};
 };
-#endif
 
 &dsi_sharp_1080_cmd {
 	qcom,mdss-dsi-t-clk-post = <0x18>;
@@ -1182,7 +1079,6 @@
 	};
 };
 
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 &dsi_samsung_fhd_ea8076_cmd {
 	qcom,mdss-dsi-t-clk-post = <0x1A>;
 	qcom,mdss-dsi-t-clk-pre = <0x1E>;
@@ -1195,7 +1091,7 @@
 		};
 	};
 };
-#endif
+
 
 &dsi_dual_nt36850_truly_cmd {
 	qcom,mdss-dsi-display-timings {
@@ -1209,7 +1105,6 @@
 	};
 };
 
-#ifdef CONFIG_MACH_XIAOMI_SM8150
 &dsi_tianma_fhd_nt36672a_video {
 	qcom,mdss-dsi-t-clk-post = <0x18>;
 	qcom,mdss-dsi-t-clk-pre = <0x1B>;
@@ -1224,17 +1119,26 @@
 };
 
 &dsi_ss_fhd_ea8076_cmd {
-	qcom,mdss-dsi-t-clk-post = <0x0F>;
-	qcom,mdss-dsi-t-clk-pre = <0x37>;
-	qcom,mdss-dsi-display-timings {
-		timing@0{
-			qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 26 25 09
-				0A 06 03 04 00 1E 1A];
-			qcom,display-topology = <1 0 1>;
-			qcom,default-topology-index = <0>;
-		};
-	};
+        qcom,mdss-dsi-t-clk-post = <0x0F>;
+        qcom,mdss-dsi-t-clk-pre = <0x37>;
+/*
+        qcom,esd-check-enabled;
+        qcom,mdss-dsi-panel-status-check-mode = "reg_read";
+        qcom,mdss-dsi-panel-status-command = [06 01 00 01 00 00 01 0A];
+        qcom,mdss-dsi-panel-status-command-state = "dsi_hs_mode";
+        qcom,mdss-dsi-panel-status-value = <0x9c>;
+        qcom,mdss-dsi-panel-status-read-length = <1>;
+*/
+        qcom,mdss-dsi-display-timings {
+                timing@0{
+                        qcom,mdss-dsi-panel-phy-timings = [00 24 0A 0A 26 25 09
+                            0A 06 03 04 00 1E 1A];
+                        qcom,display-topology = <1 0 1>;
+                        qcom,default-topology-index = <0>;
+                };
+        };
 };
+
 
 &dsi_ss_fhd_ea8076_global_cmd {
 	qcom,mdss-dsi-t-clk-post = <0x1A>;
@@ -1249,7 +1153,7 @@
 	};
 };
 
-#ifdef CONFIG_MACH_XIAOMI_VAYU
+
 &dsi_j20s_36_02_0a_video {
 	qcom,mdss-dsi-t-clk-post = <0x17>;
 	qcom,mdss-dsi-t-clk-pre = <0x18>;
@@ -1277,5 +1181,4 @@
 		};
 	};
 };
-#endif
-#endif
+
